# TranscriptTurbo

./: .gitignore  PROCESS.md  README.md  plan.txt
backend/: .env.local  README.md  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/routes/: meetings.py
backend/app/core/: config.py  errors.py
backend/app/prompts/: meeting_summary_system.txt
backend/app/services/: openai_summary.py  speechmatics.py
backend/app/utils/: audio_trim.py  docx_builder.py  uploads.py
backend/tests/: conftest.py  test_health.py  test_meetings_docx.py  test_meetings_process.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  style.css  types.ts
frontend/src/components/: HistoryPanel.tsx  ReuseDialog.tsx
frontend/src/utils/: fileHash.ts  historyStorage.ts
